// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal Rule renders without crashing, matches snapshot 1`] = `
<div>
  <div
    class="root-0-2-1"
  >
    <hr
      class="rule-0-2-2"
    />
  </div>
</div>
`;

exports[`Horizontal Rule with Bolt renders without crashing, matches snapshot 1`] = `
<div>
  <div
    class="root-0-2-1"
  >
    <hr
      class="rule-0-2-2"
    />
    <div
      class="bolt-0-2-3"
    >
      <img
        alt=""
        aria-hidden="true"
        role="presentation"
        src="test-file-stub"
      />
    </div>
    <hr
      class="rule-0-2-2"
    />
     
  </div>
</div>
`;
